# technical-exercise

./: .env.dist  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
examples/: ditto.json  wormadam.json
src/: health_check.rs  lib.rs  main.rs  pokemon.rs  translate.rs
tests/: health_check.rs  pokemon.rs
