[package]
name = "technical-exercise"
version = "0.1.0"
authors = ["Zexa <zexa@cock.li>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
surf = "2.1.0"

[dev-dependencies]
serde_json = "1.0.61"
