[package]
name = "technical-exercise"
version = "0.1.0"
authors = ["Augustinas <aug.klv@gmail.com>"]
edition = "2018"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
surf = "2.1.0"
dotenv = "0.15.0"

[dev-dependencies]
serde_json = "1.0.61"
